# edgecloud

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  _typos.toml  deny.toml  docker-compose.prod.yml  docker-compose.yml  fix_conflicts.py  fix_supervisor.patch  whitepaper.md
.cargo/: config.toml
.commandcode/taste/: taste.md
.config/: nextest.toml
docker-compose.prod/: caddy.json
docs/: canary.md  jwt-bootstrap.md  jwt-secret-rotation.md  l4-ingress.md  logs-api.md  nats-auth.md  prod-compose.md  upstream-wasmtime-resolve-check.patch  welcome.md
edge-cli/: Cargo.toml  README.md  build.rs
edge-cli/adapters/: SHA256SUMS  wasi_snapshot_preview1.reactor.wasm
edge-cli/src/: main.rs  output.rs
edge-cli/src/api/: client.rs  domains.rs  mod.rs  path.rs  webhooks.rs
edge-cli/src/commands/: activate.rs  apps.rs  auth.rs  billing.rs  build.rs  completions.rs  deploy.rs  deployments.rs  dev.rs  domains.rs  egress.rs  env.rs  ingress.rs  init.rs  logs.rs  mod.rs  quota.rs  retry.rs  rollback.rs  state_io.rs  status.rs  traffic.rs  webhooks.rs
edge-cli/src/config/: auth.rs  edgetoml.rs
edge-cli/src/scaffold/: mod.rs  templates.rs  wit.rs
edge-cli/src/state/: mod.rs
edge-cli/tests/: activate.rs  apps.rs  auth.rs  auto_rollback.rs  build_rust_wit_version.rs  completions.rs  deploy.rs  deployments.rs  domains.rs  egress.rs  env.rs  logs.rs  open.rs  preview.rs  rollback.rs  scaffold_rust_builds.rs  scaffold_verify_embed.rs  status.rs  traffic.rs  wasi_adapter_wasmtime_lockstep.rs  webhooks.rs
edge-cli/tests/common/: mod.rs
edge-config/: Cargo.toml
edge-config/src/: lib.rs
edge-control-plane/: .gitignore  .golangci.yml  Dockerfile  config.yaml  go.mod  go.sum
edge-ingress/: Cargo.toml  Dockerfile  Dockerfile.caddy-concurrent  Dockerfile.caddy-l4  README.md
edge-ingress-sidecar/: Cargo.toml
edge-ingress-sidecar/src/: aggregate.rs  caddy_metrics.rs  config.rs  expose.rs  lib.rs  main.rs  nats_pub.rs  nats_sub.rs
edge-ingress-sidecar/tests/: integration_test.rs
edge-ingress/src/: caddy.rs  config.rs  domains.rs  global_rps.rs  heartbeats.rs  ingress_metrics.rs  l4.rs  l4_cache.rs  lib.rs  main.rs  messages.rs  quota.rs  ratelimit.rs  routing.rs  tenant_ratelimit.rs  traffic.rs
edge-ingress/tests/: integration.rs
edge-js-runtime/: Cargo.toml  build.rs
edge-js-runtime-long/: Cargo.toml  build.rs
edge-js-runtime-long/src/: lib.rs  register.rs
edge-js-runtime/benches/: warm_vs_cold.rs
edge-js-runtime/benches/fixtures/: bundle_100kb.js  gen-bundle.sh
edge-js-runtime/benches/fixtures/issues/: 428-string-default.js
edge-js-runtime/src/: edge_modules.rs  lib.rs  register.rs  url_parse.rs
edge-js-sdk/: README.md  package.json
edge-migrate/: Cargo.toml
edge-migrate/docs/: design.md  security.md
edge-migrate/docs/adr/: 0001-accept-not-transformable.md
edge-migrate/edge-migrate-bin/: Cargo.toml
edge-migrate/edge-migrate-bin/src/: main.rs  report.rs
edge-migrate/edge-migrate-bin/testdata/: http_client.c
edge-migrate/edge-migrate-bin/tests/: cli_rust_test.rs  cli_transform_json_test.rs  cli_transform_test.rs
edge-migrate/edge-migrate-lib/: Cargo.toml
edge-migrate/edge-migrate-lib/src/: analyzer.rs  lib.rs  patterns.rs  preprocessor.rs  report.rs  rust_analyzer.rs  rust_transformer.rs  transformer.rs  tree.rs
edge-migrate/testdata/: http_client.c  macro_bare_socket.c  wasi_stubs.h
edge-runtime/: Cargo.toml
edge-runtime/src/: egress.rs  egress_transport.rs  engine.rs  lib.rs  limits.rs  linker.rs  memory.rs  metering.rs  probe.rs  runtime.rs  socket_egress.rs  store.rs  streams.rs  test_wit.rs
edge-runtime/src/interfaces/: cache.rs  dns.rs  filesystem.rs  http_client.rs  http_server.rs  kv_store.rs  mod.rs  networking.rs  observe.rs  process.rs  scheduling.rs  time.rs  websocket.rs
edge-runtime/src/wit/: edge-cloud.wit  edge-guest.wit  edge.wit
edge-runtime/tests/: cross_tenant_persistence.rs  cross_tenant_preopen.rs  handler_fixture_load.rs  js_fixture_load.rs  path_traversal.rs  preopen_migration_warn_fires_once.rs  preopen_per_app_isolation.rs  preopen_per_app_migration.rs  streaming.rs  v0_2_smoke.rs  wit_validation.rs
edge-spool/: Cargo.toml
edge-spool/src/: lib.rs
edge-test-helpers/: Cargo.toml
edge-test-helpers/src/: lib.rs  reexports.rs  supervisor.rs
edge-worker/: Cargo.toml  Dockerfile
edge-worker/src/: auth.rs  backoff.rs  bootstrap.rs  config.rs  cpu_sample.rs  detect.rs  dispatch.rs  downloader.rs  jwt_refresh.rs  lib.rs  log_forwarder.rs  main.rs  messages.rs  metering_dedupe.rs  metrics.rs  metrics_server.rs  nats.rs  port_pool.rs  state.rs  supervisor.rs  tracing_layer.rs  verifier.rs  worker_key.rs
edge-worker/tests/: cp_rollback_e2e.rs  ingress_wire_integration.rs  integration_tests.rs  js_websocket_e2e.rs  layer_integration.rs  nats_wire_contract.rs  preopen_cross_component_isolation.rs  redis_lite_e2e.rs  signing_wire_contract.rs  test_fixtures_match_source.rs
edge-worker/tests/fixtures/: README.md  SHA256SUMS  handler-js.wasm  handler.wasm  js_websocket_handler.wasm  log-emit.c  redis_lite.wasm
edge-worker/tests/fixtures/handler/: Cargo.toml
edge-worker/tests/fixtures/handler-js/: build.sh  index.js
edge-worker/tests/fixtures/handler/src/: lib.rs
samples/hello-js-ws/: .gitignore  Cargo.toml  README.md  build.rs  edge.toml  package-lock.json  package.json
samples/hello-js-ws/src/: handler.js  lib.rs
samples/hello-tcp/: .gitignore  Cargo.toml  README.md  edge.toml
samples/hello-tcp/.cargo/: config.toml
samples/hello-tcp/src/: lib.rs
samples/redis-lite/: .gitignore  Cargo.toml  README.md  edge.toml
samples/redis-lite/.cargo/: config.toml
samples/redis-lite/resp-parser/: Cargo.toml
samples/redis-lite/resp-parser/src/: lib.rs
samples/redis-lite/src/: lib.rs
scripts/: bootstrap-prod.sh  dev-bandwidth-smoke.sh  dev-clean.sh  dev-concurrent-smoke.sh  dev-install.sh  dev-l4-smoke.sh  dev-up.sh  docker-entrypoint.sh  rollback-e2e.sh
wit/: edge-cloud.wit
(+483 files in other folders)
