[workspace]
resolver = "2"
members = [
    "edge-runtime",
    "edge-worker",
    "edge-ingress",
    "edge-cli",
    "edge-config",
    "edge-migrate/edge-migrate-lib",
    "edge-migrate/edge-migrate-bin",
    "edge-spool",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hüseyin Poyraz Küçükarslan"]
license = "Proprietary"

[workspace.dependencies]
tree-sitter = "0.25"
tree-sitter-c = "0.24"
tree-sitter-rust = "0.24"
walkdir = "2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
