[workspace]
resolver = "2"
members = [
    "edge-runtime",
    "edge-runtime/bin/wasm2cwasm",
    "edge-worker",
    "edge-ingress",
    "edge-cli",
    "edge-config",
    "edge-migrate/edge-migrate-lib",
    "edge-migrate/edge-migrate-bin",
    "edge-spool",
]

# Excluded from the workspace:
#   - edge-worker/tests/fixtures/handler: built separately by the
#     Phase E fixture-build script (see tests/fixtures/README.md).
#     The crate's `wasm32-unknown-unknown` target and `wit-bindgen`
#     0.45 (older pin) are intentionally not normalized against
#     the workspace's resolver-2 defaults.
exclude = [
    "edge-worker/tests/fixtures/handler",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hüseyin Poyraz Küçükarslan"]
license = "Proprietary"

[workspace.dependencies]
tree-sitter = "0.25"
tree-sitter-c = "0.24"
tree-sitter-rust = "0.24"
walkdir = "2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
