[workspace]
resolver = "2"
members = [
    "edge-runtime",
    "edge-runtime/bin/wasm2cwasm",
    "edge-worker",
    "edge-ingress",
    "edge-ingress-sidecar",
    "edge-cli",
    "edge-config",
    "edge-migrate/edge-migrate-lib",
    "edge-migrate/edge-migrate-bin",
    "edge-spool",
    "edge-js-runtime",
    "edge-js-runtime-long",
]

# Excluded from the workspace:
#   - edge-worker/tests/fixtures/handler: built separately by the
#     Phase E fixture-build script (see tests/fixtures/README.md).
#     The crate's `wasm32-unknown-unknown` target and `wit-bindgen`
#     0.45 (older pin) are intentionally not normalized against
#     the workspace's resolver-2 defaults.
exclude = [
    "edge-worker/tests/fixtures/handler",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hüseyin Poyraz Küçükarslan"]
license = "Proprietary"

[workspace.dependencies]
tree-sitter = "0.25"
tree-sitter-c = "0.24"
tree-sitter-rust = "0.24"
walkdir = "2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"

# Dev profile tuned for local multi-agent worktrees:
#   - debug = "line-tables-only" keeps file:line info in backtraces
#     (so `cargo test` failures are still readable) but skips the
#     variable / type info that bloats .dwp / .dwo files for heavy
#     crates like wasmtime, tree-sitter, wasmtime-wasi-http.
#   - incremental = true avoids full rebuilds on small edits.
#   - opt-level stays at 0 (Cargo default) so unoptimized dev builds
#     match test expectations; tests can still override per-package.
# CI is unaffected: each rust-* job sets RUSTFLAGS="-C opt-level=0
# -C debuginfo=0 -C link-arg=-fuse-ld=mold" which overrides this
# profile on the runner.
[profile.dev]
debug = "line-tables-only"
incremental = true
