[package]
name = "edge-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "edgeCloud developer CLI toolchain"

# `cargo install --path edge-cli` installs the binary as `edge` (not
# `edge-cli`) — the binary is the user-facing CLI and every doc,
# sample, scaffold, and CI smoke job references it as `edge`. The
# crate name stays `edge-cli` to keep the workspace's
# `cargo test -p edge-cli` and the `cargo install --path edge-cli`
# ergonomics intact. See PR #498 review for the rename rationale.
[[bin]]
name = "edge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "blocking"], optional = true }
tokio = { version = "1.45", features = ["full"], optional = true }
console = "0.15"
open = "5.0"
notify = "6.1"
regex = "1.10"
walkdir = "2.5"
# Used by `edge build` to compute a deterministic SHA-256 over the
# project's source tree (issue #307 PR2: SLSA L1 provenance). The
# digest is uploaded to the control plane via the multipart
# `build_metadata` form field and folded into the SLSA envelope's
# `materials[].digest.sha256` slots.
sha2 = "0.10"
hex = "0.4"

dirs = "5.0"
# Used by `edge logs --follow` to install a SIGINT handler so the
# polling loop exits cleanly on Ctrl-C. Pulled in unconditionally
# rather than feature-gated so the binary shape matches what the
# docs / smoke tests expect.
ctrlc = "3"
# Reads the API key from /dev/tty with terminal echo disabled when
# `edge auth login --no-echo` is used (issue #108). Default login
# path (stdin paste, echo on) is preserved for CI/pipe ergonomics.
rpassword = "7"
# Used by `edge deploy` to mint a per-run UUID v4 Idempotency-Key
# (issue #52). When the user supplies `--idempotency-key <UUID>`
# (CI override), that value is forwarded verbatim; otherwise the
# runner auto-mints so a CLI retry on a transient network error
# replays the original deployment instead of creating a duplicate.
uuid = { version = "1.10", features = ["v4"] }
edge-config = { path = "../edge-config" }

[features]
default = ["network"]
network = ["dep:reqwest", "dep:tokio"]

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2.0"
tempfile = "3.10"
predicates = "3.0"
tokio = { version = "1", features = ["macros", "rt"] }
