[package]
name = "edge-config"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Shared edgeCloud user-config helpers (config file path, API key + URL loaders)"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
