[package]
name = "edge-ingress-sidecar"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false

# `cargo-udeps` flags every dep as "unused" until a call site appears
# in the source tree. Schema is nested (see CLAUDE.md "Cargo udeps
# ignore-list schema"): `normal` covers `[dependencies]`, `development`
# covers `[dev-dependencies]`. Update this list as each PR adds deps —
# the goal is to delete entries once every dep has a real call site.
[package.metadata.cargo-udeps.ignore]
# PR B is the data plane: it ships publisher + consumer + UDS writer +
# aggregator + caddy scraper. Every prod dep below has a real call
# site in the sidecar's main pipeline.
normal = []
# PR E adds the integration test (`tests/integration_test.rs`) which
# uses testcontainers + testcontainers-modules to spin up a real
# JetStream-enabled NATS container, plus `edge-test-helpers` for the
# shared `start_nats` / `should_skip_integration_tests` helpers. The
# cargo-udeps nightly gate cannot see those call sites — they live
# behind a `tests/` boundary that the host scan doesn't traverse.
development = ["testcontainers", "testcontainers-modules", "edge-test-helpers"]

[[bin]]
name = "edge-ingress-sidecar"
path = "src/main.rs"

[lib]
# `src/lib.rs` re-exports the same modules that `main.rs` declares so
# the integration test (`tests/integration_test.rs`) can import them as
# `edge_ingress_sidecar::*`. The bin crate compiles independently of
# the lib; the modules are declared once in `lib.rs` and consumed by
# both. Without this hatch, integration tests against a bin-only
# crate cannot reach the internals — `cargo build --tests` succeeds
# for unit tests inside `mod tests` but fails for `tests/*.rs`.
name = "edge_ingress_sidecar"
path = "src/lib.rs"

[dependencies]
# Mirrors `edge-ingress/Cargo.toml`. The sidecar exists so `edge-ingress`
# itself never has to host the JetStream sum-side of cross-replica rate
# limiting. Issue #665.
tokio = { version = "1.45", features = ["full"] }
async-nats = { version = "0.49", features = ["jetstream"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
tokio-util = { version = "0.7", features = ["rt"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", features = ["http-listener"] }

[dev-dependencies]
# Per-test UDS socket paths for the `expose::write_to_path` tests.
tempfile = "3"
# Serializes the `config::tests` that mutate global env vars
# (`SIDECAR_NATS_URL`, `HOSTNAME`, etc.). Without this, `cargo nextest`
# runs the `from_env_*` tests in parallel and one test's
# `unset_all_config_vars()` can stomp another's `set_var()` mid-flight,
# producing a flaky `from_env_overrides` failure that resolves on re-run.
serial_test = "3"
# Integration test (`tests/integration_test.rs`, PR E) spins up a real
# JetStream-enabled NATS container. `edge-test-helpers` provides the
# shared `start_nats` / `should_skip_integration_tests` helpers used
# by `edge-worker` + `edge-ingress` integration tests already, so the
# testcontainers shape matches workspace convention.
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["nats"] }
edge-test-helpers = { path = "../edge-test-helpers" }