[package]
name = "edge-ingress-sidecar"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false

# `cargo-udeps` flags every dep as "unused" until PR B wires them — the
# skeleton placeholder modules only carry `#![allow(dead_code)]` stubs.
# Schema is nested (see CLAUDE.md "Cargo udeps ignore-list schema"):
# `normal` covers `[dependencies]`, `development` covers `[dev-dependencies]`.
# Update this list as PRs B/C/D/E land — the goal is to delete entries
# once each dep has a real call site.
[package.metadata.cargo-udeps.ignore]
# PR B is the data plane: it ships publisher + consumer + UDS writer +
# aggregator + caddy scraper. Every prod dep below has a real call
# site in the sidecar's main pipeline. `edge-test-helpers` was wired
# by PR B for the planned testcontainers integration test, but the
# review pushed that test to PR E — drop both the testcontainers dev-
# deps AND the `edge-test-helpers` dev-dep now; the sidecar's
# unit tests (in `mod tests` blocks) don't need either.
normal = []
development = []

[[bin]]
name = "edge-ingress-sidecar"
path = "src/main.rs"

[dependencies]
# Mirrors `edge-ingress/Cargo.toml`. The sidecar exists so `edge-ingress`
# itself never has to host the JetStream sum-side of cross-replica rate
# limiting. Issue #665.
tokio = { version = "1.45", features = ["full"] }
async-nats = { version = "0.49", features = ["jetstream"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
tokio-util = { version = "0.7", features = ["rt"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", features = ["http-listener"] }

[dev-dependencies]
# Per-test UDS socket paths for the `expose::write_to_path` tests.
tempfile = "3"
# Serializes the `config::tests` that mutate global env vars
# (`SIDECAR_NATS_URL`, `HOSTNAME`, etc.). Without this, `cargo nextest`
# runs the `from_env_*` tests in parallel and one test's
# `unset_all_config_vars()` can stomp another's `set_var()` mid-flight,
# producing a flaky `from_env_overrides` failure that resolves on re-run.
serial_test = "3"