[package]
name = "edge-js-runtime"
version = "0.1.0"
edition = "2021"
publish = false
description = "edgeCloud JavaScript runtime — QuickJS + edge:cloud WIT bindings"

[workspace]

[lib]
# Both cdylib (the wasm-time-loaded QuickJS runtime) and rlib (so the
# `cargo test --manifest-path edge-js-runtime/Cargo.toml` command can
# resolve `use crate::...` paths and run the in-crate unit tests added
# in commit "wire register_websocket + tests"). The cdylib is what
# gets shipped to the worker; the rlib is purely a test-time artifact.
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# Use wit-bindgen 0.45 to match other crates
wit-bindgen = "0.45"
# rquickjs with bindgen feature
rquickjs = { version = "0.9.0", features = ["bindgen"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
