[package]
name = "edge-js-runtime"
version = "0.1.0"
edition = "2021"
publish = false
description = "edgeCloud JavaScript runtime — QuickJS + edge:cloud WIT bindings"

[workspace]

[lib]
# Both cdylib (the wasm-time-loaded QuickJS runtime) and rlib (so the
# `cargo test --manifest-path edge-js-runtime/Cargo.toml` command can
# resolve `use crate::...` paths and run the in-crate unit tests added
# in commit "wire register_websocket + tests"). The cdylib is what
# gets shipped to the worker; the rlib is purely a test-time artifact.
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# Use wit-bindgen 0.45 to match other crates
wit-bindgen = "0.45"
# rquickjs with bindgen feature
rquickjs = { version = "0.9.0", features = ["bindgen"] }
# `OnceCell` for the cached bytecode blob — see lib.rs::USER_BYTECODE.
once_cell = "1.19"

[dev-dependencies]
# Host-target criterion bench; runs on the dev machine, not wasm32.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "plotters", "rayon"] }

# Inert feature — when enabled, `register_all_stub` becomes available
# so the `warm_vs_cold` bench can use the same `globalThis.EdgeCloud`
# shape as the wasm-target runtime. Not enabled by `cargo build`
# (which targets wasm32 and would otherwise pull in unused code).
#
# Issue #426: the long-running (`edge-runtime`) world entry point lives
# in the sibling crate `edge-js-runtime-long/` rather than here.
# Putting both worlds in one cdylib is impossible — each
# `wit_bindgen::generate!` invocation emits a `wasi:cli/run` export,
# and two exports of the same symbol in the same artifact produce a
# link-time collision. Two sibling cdylibs avoid this cleanly; the LR
# crate shares `compile_user_bundle` + `USER_BYTECODE` + the `register`
# bodies via duplication (mirrored `src/register.rs`, see that file's
# header for the rationale).
[features]
bench = []

[[bench]]
name = "warm_vs_cold"
harness = false
required-features = ["bench"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
