[workspace]
resolver = "2"
members = ["edge-migrate-lib", "edge-migrate-bin"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["edgeCloud team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tree-sitter = "0.24"
tree-sitter-c = "0.21"
tree-sitter-rust = "0.24"
walkdir = "2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["multipart", "json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
