[package]
name = "edge-runtime"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Wasmtime-based runtime exposing WASI Preview 2 host interfaces for edge computing"

[dependencies]
# Core wasmtime runtime
wasmtime = { version = "25.0", features = ["component-model", "async"] }
wasmtime-wasi = { version = "25.0" }

# Async runtime
tokio = { version = "1.45", features = ["full"], optional = true }

# HTTP client for edge:http-client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false, optional = true }

# Streaming primitives for reqwest::Body::wrap_stream (inbound + outbound body streams)
futures = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }

# Caching
lru = { version = "0.12", optional = true }
parking_lot = "0.12"

# DNS resolution for edge:networking
trust-dns-resolver = { version = "0.23", features = ["tokio"], optional = true }

# Metrics
metrics = { version = "0.24", optional = true }

# HTTP parsing for http-server
httparse = { version = "1.10", optional = true }

# TLS for http-server
rustls = { version = "0.23", default-features = false, features = ["ring"], optional = true }
rustls-pemfile = { version = "2.2", optional = true }
tokio-rustls = { version = "0.26", optional = true }

# gzip compression for http-server
flate2 = { version = "1.1", optional = true }

# Base64 encoding for kv-store persistence
base64 = "0.22"

# URL parsing for egress policy
url = "2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
clock = { version = "0.4", optional = true }

[dev-dependencies]
wasmtime-environ = "25.0"
wiremock = "0.6"
wat = "1"

[features]
default = ["http-client", "kv-store", "cache", "observe", "time", "scheduling", "process", "http-server", "networking"]
http-client = ["dep:reqwest", "reqwest/blocking", "dep:tokio", "tokio/time", "tokio/sync", "dep:bytes", "dep:futures"]
kv-store = []
cache = ["dep:lru"]
observe = ["dep:metrics"]
time = ["dep:clock"]
scheduling = ["dep:tokio"]
process = []
http-server = ["dep:tokio", "dep:httparse", "dep:rustls", "dep:rustls-pemfile", "dep:tokio-rustls", "dep:flate2", "dep:bytes", "dep:futures"]
networking = ["dep:trust-dns-resolver", "dep:tokio"]