[package]
name = "edge-runtime"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Wasmtime-based runtime exposing WASI Preview 2 host interfaces for edge computing"

[dependencies]
# Core wasmtime runtime
wasmtime = { version = "=45.0.3", features = ["component-model", "async", "anyhow"] }
wasmtime-wasi = { version = "=45.0.3" }
# WASI HTTP host impls — gives us `WasiHttpView`, `ProxyPre`, and the
# `add_to_linker_async` helper that wires wasi:http/io/clocks/random into
# a `ComponentLinker`. Used in `linker.rs` (C4) and via `ProxyPre` in the
# worker's `dispatch.rs` (C6). Pulls `hyper` transitively.
wasmtime-wasi-http = "=45.0.3"

# Async runtime
tokio = { version = "1.45", features = ["full"], optional = true }

# HTTP types — `WasiHttpView::send_request` takes
# `hyper::Request<HyperOutgoingBody>` and `OutgoingRequestConfig`. The
# trait also exposes `is_forbidden_header(&http::HeaderName)` which we
# override in `runtime.rs` (C3) to strip hop-by-hop headers.
hyper = { version = "1", features = ["client", "http1"] }
http = "1"

# Caching
lru = { version = "0.12", optional = true }
parking_lot = "0.12"

# Metrics
metrics = { version = "0.24", optional = true }

# Base64 encoding for kv-store persistence
base64 = "0.22"

# URL parsing for egress policy
url = "2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
clock = { version = "0.4", optional = true }

[dev-dependencies]
wasmtime-environ = "=45.0.3"
wiremock = "0.6"
wat = "1"
wit-parser = "0.217"
semver = "1"
tempfile = "3"

[features]
# Default features gate only modules that still exist in
# `src/interfaces/`. The v0.2 cleanup dropped `http-client`, `http-server`,
# `networking`, and `dns`; their deps (`reqwest`, `futures`, `bytes`,
# `httparse`, `rustls`, `rustls-pemfile`, `tokio-rustls`, `flate2`,
# `trust-dns-resolver`) are no longer listed.
default = ["kv-store", "cache", "observe", "time", "scheduling", "process"]
kv-store = []
cache = ["dep:lru"]
observe = ["dep:metrics"]
time = ["dep:clock"]
scheduling = ["dep:tokio"]
process = []

# v0.2 PR #196 ships a backwards-incompatible rewrite of the runtime
# public API: the v0.1 custom HTTP server + networking + DNS layer is
# replaced with `wasi:http/incoming-handler` (FaaS) and `wasi:sockets`
# (long-running). cargo-semver-checks flags the dropped structs/traits/
# fields as breaking changes when comparing the PR against origin/main
# (which still has the v0.1 API). These lints allow the v0.1 → v0.2
# transition; tracked in #211.
[package.metadata.cargo-semver-checks.lints]
# v0.1 → v0.2: the runtime's public API surface changes wholesale (the
# custom HTTP/networking/streaming stack is replaced with wasi:http +
# wasi:sockets bindings). Every "removal" / "rename" / "field added"
# lint below fires because of that transition, not regressions. None
# of this is meant to round-trip through a v0.1 → v0.1 patch bump;
# this is the v0.2 cut. Re-evaluate after the wasmtime bump in #211.
auto_trait_impl_removed = "allow"
constructible_struct_adds_field = "allow"
constructible_struct_adds_private_field = "allow"
enum_missing = "allow"
enum_variant_missing = "allow"
feature_missing = "allow"
function_missing = "allow"
inherent_method_missing = "allow"
method_missing = "allow"
module_missing = "allow"
pub_module_level_const_missing = "allow"
struct_missing = "allow"
struct_pub_field_missing = "allow"
trait_missing = "allow"
variant_missing = "allow"
# Re-evaluated after the wasmtime 25.0.3 -> 45.0.3 bump (PR #211). The
# bindgen-generated `add_to_linker` macro output changed shape in 36+:
# it now takes 3 params (`<T, D>(linker, options, host_getter)` where
# `D: HostWithStore`) instead of 2, and `GuestIndices::new` takes a
# `D` generic. wasmtime-wasi 36+ also added `Host::exit_with_code`
# to the wasi:cli/exit Host trait. None of this is a runtime API we
# own; it's all bindgen expansion noise from the wasmtime bump.
function_parameter_count_changed = "allow"
method_parameter_count_changed = "allow"
method_requires_different_generic_type_params = "allow"
trait_method_added = "allow"

# `cargo-udeps` (run on nightly) flags `metrics`, `clock`, and
# `tracing-subscriber` as unused because their usage is gated by the
# `observe` / `time` features, which it does not enable by default.
# They are used under `--features observe --features time`, which
# is what the runtime+worker integration tests build with.
[package.metadata.cargo-udeps.ignore]
normal = ["clock", "metrics", "tracing-subscriber"]
development = ["wiremock"]
